Bug 164037 - When editing a basic dialog in Basic-IDE, the font "Character Dialog" does not display the current settings
Summary: When editing a basic dialog in Basic-IDE, the font "Character Dialog" does no...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.3.2 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 target:25.2.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2024-11-25 08:33 UTC by nobu
Modified: 2025-01-14 07:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (9.85 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-11-25 08:35 UTC, nobu
Details
sample image png (90.67 KB, image/png)
2024-11-25 08:36 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-11-25 08:33:46 UTC
Description:
When editing a dialog, the font "Character Dialog" does not display the current settings.

Steps to Reproduce:
1. Open new calc.
2. Create new dialog.
3. Create new button control in the dialoq.
4. Edit font of the button conrtrol in Character dialog.

Actual Results:
5. The font size is displayed as 2pt.

Expected Results:
5. The font size is displayed in the correct size.

In "Version 24.2.7.2", the font size is displayed as "9pt". (This is the default value)


Reproducible: Always


User Profile Reset: No

Additional Info:

The font setting in the sample file is "DejaVu Sans Mono, Bold, 16", but the "Character Dialog" always shows the same settings.

---
Not Reproduced with
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: default

Reproducible with
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: threaded

Reproducible with
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 869fff459cbee6a2edadd5c24f2b65c199712de6
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2024-11-25 08:35:30 UTC
Created attachment 197768 [details]
sample file
Comment 2 nobu 2024-11-25 08:36:17 UTC
Created attachment 197769 [details]
sample image png
Comment 3 m_a_riosv 2024-11-26 04:38:17 UTC
Sample file is empty, please can you attach it with all the things, which you are referring to.
Comment 4 nobu 2024-11-26 05:27:09 UTC
(In reply to m_a_riosv from comment #3)
> Sample file is empty, please can you attach it with all the things, which
> you are referring to.

The file contains only a minimal set of dialogs for illustrative purposes.
Open “Baisc-IDE” from “Edit Macro” and open “Standard.Dialog1” contained in the document.
Comment 5 nobu 2024-11-28 11:16:01 UTC
Steps to Reproduce:
1. Open new Calc or Writer or other application.
2. Open Basic-IDE.
3. Create new basic dialog in Basic-IDE.
4. Create new button control in the basic dialog in Basic-IDE.
5. Edit font of the button control in Character dialog in the basic dialog in Basic-IDE.

https://help.libreoffice.org/latest/en-US/text/sbasic/shared/01050000.html

https://help.libreoffice.org/latest/en-US/text/sbasic/guide/create_dialog.html

https://help.libreoffice.org/latest/en-US/text/sbasic/guide/insert_control.html
Comment 6 nobu 2024-12-06 10:44:54 UTC
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f232952e727c50cc3a5927ff3b082f88e36c9bed
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: default
Comment 7 nobu 2024-12-20 07:04:12 UTC
Reproducible with

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 468d47bdf44a772e989a0adbeb5bb097e3cb4f31
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 8 nobu 2024-12-22 10:27:11 UTC
Reproducible with

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 141f3fd15633803afa720837405a0bacbc2726cb
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 9 zcrhonek 2024-12-27 09:44:28 UTC
Confirm with Version: 24.8.5.0.0+ (X86_64) / LibreOffice Community
Build ID: 7b11ebe90ae90560ffb56013abc9d405acd9389c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 10 zcrhonek 2024-12-27 09:56:38 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
Thanks
 0d33c55040f6d8e70d52e03695861230ad52a5d3 is the first bad commit
commit 0d33c55040f6d8e70d52e03695861230ad52a5d3
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sun Aug 4 00:04:43 2024 +0200

    source 2bf3cada925ca49e3ac6a249ec6c342954739986
171410: tdf#153343 Show settings for the actual default font in control properties | https://gerrit.libreoffice.org/c/core/+/171410
Comment 11 Michael Weghorn 2025-01-10 13:27:04 UTC
(In reply to zcrhonek from comment #10)
> Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?

Pending fix: https://gerrit.libreoffice.org/c/core/+/180073
Comment 12 Commit Notification 2025-01-10 14:34:42 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9dd21ea57a8e098f994a4c65d299480f5211a18e

tdf#164037 Check property exists before accessing it

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Weghorn 2025-01-10 14:35:05 UTC
Fixed in master, backports for 25-2 and 24-8 pending in Gerrit.
Comment 14 nobu 2025-01-10 14:50:29 UTC
Thanks.
Comment 15 nobu 2025-01-11 04:39:48 UTC
This bug is not seen in the following versions:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9ae567c791bcffdc3fff9e3fb11b46275a13d2b
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Thank you.
Comment 16 BogdanB 2025-01-11 05:56:12 UTC
Verified, based on comment 15.
Comment 17 Commit Notification 2025-01-12 12:11:05 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a37d023506543d876434c821982e96c90888e493

tdf#164037 Check property exists before accessing it

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2025-01-12 12:12:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/7e8d34d4e5791f917f2aff3e7f9c4a79d5769613

tdf#164037 Check property exists before accessing it

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 nobu 2025-01-14 07:02:18 UTC
And the following daily version did not have this problem.:

Version: 25.2.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 9cde9380da984512f0a8bbac8241fdecceec4636
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Version: 24.8.5.0.0+ (X86_64) / LibreOffice Community
Build ID: 6478985aa277eba1a32146b9fe9047ba3199fcc5
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: threaded